# omni-threadx

./: CMakeLists.txt  Kconfig  Kconfig.threadx  README.md
common/: CMakeLists.txt
ports/cortex_m0/gnu/: CMakeLists.txt  tx_initialize_low_level.S
ports/cortex_m3/gnu/: tx_initialize_low_level.S
ports/cortex_m4/gnu/: CMakeLists.txt  tx_initialize_low_level.S
ports/cortex_m7/gnu/: tx_initialize_low_level.S
